kubernetes-examples/ingress/backends.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sandbox-nginx-service-1
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: sandbox-nginx-1
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-nginx-deployment-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox-nginx-1
  template:
    metadata:
      labels:
        app: sandbox-nginx-1
    spec:
      containers:
      - image: nginxdemos/nginx-hello:plain-text
        name: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sandbox-nginx-service-2
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: sandbox-nginx-2
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-nginx-deployment-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox-nginx-2
  template:
    metadata:
      labels:
        app: sandbox-nginx-2
    spec:
      containers:
      - image: nginxdemos/nginx-hello:plain-text
        name: nginx
        ports:
        - containerPort: 80
