kubernetes-examples/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-ingress
spec:
  rules:
  - http:
      paths:
      - path: /nginx1
        pathType: Prefix
        backend:
          service:
            name: sandbox-nginx-service-1
            port:
              number: 80
      - path: /nginx2
        pathType: Prefix
        backend:
          service:
            name: sandbox-nginx-service-2
            port:
              number: 80
